fix gap

--- a/css/matrix.css
+++ b/css/matrix.css
@@ -116,7 +116,7 @@
   text-align: left;
   margin:0.5em 0 0.5em 0;
   padding: 0 2em;
-  box-shadow: 0 0 0 0.5em rgba(22, 22, 22, 1.0);
+  box-shadow: 0 0 0 0.7em rgba(22, 22, 22, 1.0);
   a{
     color:#a94442;
   }
